add group number

--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css"
     />
     <link rel="stylesheet" href="style.css" />
-    <title>IPM - FCT NOVA - Group xx</title>
+    <title>IPM - FCT NOVA - Group 05</title>
 
     <!-- Created by S-Tech04 -->
   </head>
   <body>
     <div class="title">
       <h7>Human-Computer Interaction</h7>
-      <h8>Group xx</h8>
+      <h8>Group 05</h8>
     </div>
     <div class="container">
       <div class="card">
