Created Final Project Page

--- a/index.html
+++ b/index.html
@@ -76,6 +76,10 @@
       </div>
     </div>
   </div>
+
+  <div class="projectButton">
+    <button class="buttonCustomised"><a href="finalProject.html">Final Project</a></button>
+  </div>
 </body>
 
 </html>
