Final Project Button Added

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
   <div class="title">
     <h1>Human-Computer Interaction</h1>
-    <br />
+    <br>
     <h2>P1 - Group 05</h2>
   </div>
   <div class="container">
@@ -29,8 +29,7 @@
           <h4>64475</h4>
         </div>
         <div class="sci">
-          <a href="#"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> First
-            Assignment</a>
+          <a href="#"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> First Assigment</a>
         </div>
       </div>
     </div>
@@ -44,8 +43,7 @@
           <h4>55732</h4>
         </div>
         <div class="sci">
-          <a href="#"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> First
-            Assignment</a>
+          <a href="#"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> First Assigment</a>
         </div>
       </div>
     </div>
@@ -59,8 +57,7 @@
           <h4>57415</h4>
         </div>
         <div class="sci">
-          <a href="#"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> First
-            Assignment</a>
+          <a href="#"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> First Assigment</a>
         </div>
       </div>
     </div>
@@ -74,11 +71,14 @@
           <h4>55749</h4>
         </div>
         <div class="sci">
-          <a href="#"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> First
-            Assignment</a>
+          <a href="#"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> First Assigment</a>
         </div>
       </div>
     </div>
+  </div>
+
+  <div class="projectButton">
+    <button class="buttonCustomised"><a href="finalProject.html">Final Project</a></button>
   </div>
 </body>
 
