joana first assigment

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           <h4>55732</h4>
         </div>
         <div class="sci">
-          <a href="#"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> First Assigment</a>
+          <a href="joana/first_assig.html"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> First Assigment</a>
         </div>
       </div>
     </div>
