--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             <h4>55749</h4>
           </div>
           <div class="sci">
-            <a href="/resources/55749_Ass1.pdf" download="55749_Assignment1"
+            <a href="/resources/55749_Ass1.pdf" download="55749_Assignment1.pdf"
               ><i class="fa fa-file-pdf-o" aria-hidden="true"></i> First
               Assigment</a
             >
