Tomas and Joao pdf

--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
           <h4>57415</h4>
         </div>
         <div class="sci">
-          <a href="#"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> First
-            Assigment</a>
+          <a href="./pdf/57415_Assignment1.pdf" download="57415_Assignment1.pdf"><i class="fa fa-file-pdf-o"
+              aria-hidden="true"></i>First Assigment</a>
         </div>
       </div>
     </div>
@@ -74,7 +74,7 @@
           <h4>55749</h4>
         </div>
         <div class="sci">
-          <a href="5749_Ass1.pdf" download="55749_Assignment1.pdf"><i class="fa fa-file-pdf-o"
+          <a href="./pdf/55749_Assignment1.pdf" download="55749_Assignment1.pdf"><i class="fa fa-file-pdf-o"
               aria-hidden="true"></i>First Assigment</a>
         </div>
       </div>
