Another attempt to fix joao's photo

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <div class="card">
       <div class="content">
         <div class="imgBx">
-          <img src="./img/joao_nuno.jpg" alt="" />
+          <img src="./img/joao_nuno.png" alt="" />
         </div>
         <div class="contentBx">
           <h3>João Nuno Santos</h3>
