--- a/index.html
+++ b/index.html
@@ -44,12 +44,7 @@
           <h4>55732</h4>
         </div>
         <div class="sci">
-<<<<<<< HEAD
-          <a href="joana/first_assig.html"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> First Assigment</a>
-=======
-          <a href="#"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> First
-            Assigment</a>
->>>>>>> a03dc92961dc901021d6985e0545021c0cf8863d
+          <a href="./pdf/55732_Assignment1.pdf" download="55732_Assignment1.pdf"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> First Assigment</a>
         </div>
       </div>
     </div>
