changes to 55732_Assigment

--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
           <h4>55732</h4>
         </div>
         <div class="sci">
-          <a href="./pdf/55732_Assignment1.pdf" download="55732_Assignment1.pdf"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> First Assigment</a>
+          <a href="./pdf/55732_Assignment1.pdf" download="55732_Assignment1.pdf"><i class="fa fa-file-pdf-o"
+             aria-hidden="true"></i>First Assigment</a>
         </div>
       </div>
     </div>
