hide final proj button

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     </div>
 
     <div class="projectButton">
-      <button class="buttonCustomised">
+      <button class="buttonCustomised" hidden>
         <a href="finalProject.html">Final Project</a>
       </button>
     </div>
