--- a/index.html
+++ b/index.html
@@ -1,106 +1,96 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css"
-    />
-    <link rel="stylesheet" href="style.css" />
-    <title>IPM - FCT NOVA - Group 05</title>
 
-    <!-- Created by S-Tech04 -->
-  </head>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" />
+  <link rel="stylesheet" href="style.css" />
+  <title>IPM - FCT NOVA - Group 05</title>
 
-  <body>
-    <div class="title">
-      <h1>Human-Computer Interaction</h1>
-      <br />
-      <h2>P1 - Group 05</h2>
+  <!-- Created by S-Tech04 -->
+</head>
+
+<body>
+  <div class="title">
+    <h1>Human-Computer Interaction</h1>
+    <br />
+    <h2>P1 - Group 05</h2>
+  </div>
+  <div class="container">
+    <div class="card">
+      <div class="content">
+        <div class="imgBx">
+          <img src="./img/joana.jpg" alt="" />
+        </div>
+        <div class="contentBx">
+          <h3>Joana Moura</h3>
+          <h4>55732</h4>
+        </div>
+        <div class="sci">
+          <a href="./pdf/55732_Assignment1.pdf" download="55732_Assignment1.pdf"><i class="fa fa-file-pdf-o"
+              aria-hidden="true"></i> First
+            Assignment</a>
+        </div>
+      </div>
     </div>
-    <div class="container">
-      <div class="card">
-        <div class="content">
-          <div class="imgBx">
-            <img src="./img/ion.jpg" alt="" />
-          </div>
-          <div class="contentBx">
-            <h3>Ion Chirica</h3>
-            <h4>64475</h4>
-          </div>
-          <div class="sci">
-            <a href="#"
-              ><i class="fa fa-file-pdf-o" aria-hidden="true"></i> First
-              Assignment</a
-            >
-          </div>
+    <div class="card">
+      <div class="content">
+        <div class="imgBx">
+          <img src="./img/tomas.jpg" alt="" />
         </div>
-      </div>
-      <div class="card">
-        <div class="content">
-          <div class="imgBx">
-            <img src="./img/joana.jpg" alt="" />
-          </div>
-          <div class="contentBx">
-            <h3>Joana Moura</h3>
-            <h4>55732</h4>
-          </div>
-          <div class="sci">
-            <a
-              href="./pdf/55732_Assignment1.pdf"
-              download="55732_Assignment1.pdf"
-              ><i class="fa fa-file-pdf-o" aria-hidden="true"></i> First
-              Assignment</a
-            >
-          </div>
+        <div class="contentBx">
+          <h3>Tomás Silva</h3>
+          <h4>55749</h4>
         </div>
-      </div>
-      <div class="card">
-        <div class="content">
-          <div class="imgBx">
-            <img src="./img/joao_nuno.png" alt="" />
-          </div>
-          <div class="contentBx">
-            <h3>João Nuno Santos</h3>
-            <h4>57415</h4>
-          </div>
-          <div class="sci">
-            <a
-              href="./pdf/57415_Assignment1.pdf"
-              download="57415_Assignment1.pdf"
-              ><i class="fa fa-file-pdf-o" aria-hidden="true"></i> First
-              Assignment</a
-            >
-          </div>
-        </div>
-      </div>
-      <div class="card">
-        <div class="content">
-          <div class="imgBx">
-            <img src="./img/tomas.jpg" alt="" />
-          </div>
-          <div class="contentBx">
-            <h3>Tomás Silva</h3>
-            <h4>55749</h4>
-          </div>
-          <div class="sci">
-            <a
-              href="./pdf/55749_Assignment1.pdf"
-              download="55749_Assignment1.pdf"
-              ><i class="fa fa-file-pdf-o" aria-hidden="true"></i> First
-              Assignment</a
-            >
-          </div>
+        <div class="sci">
+          <a href="./pdf/55749_Assignment1.pdf" download="55749_Assignment1.pdf"><i class="fa fa-file-pdf-o"
+              aria-hidden="true"></i> First
+            Assignment</a>
         </div>
       </div>
     </div>
 
-    <div class="projectButton">
-      <button class="buttonCustomised" hidden>
-        <a href="finalProject.html">Final Project</a>
-      </button>
+    <div class="card">
+      <div class="content">
+        <div class="imgBx">
+          <img src="./img/joao_nuno.png" alt="" />
+        </div>
+        <div class="contentBx">
+          <h3>João Nuno Santos</h3>
+          <h4>57415</h4>
+        </div>
+        <div class="sci">
+          <a href="./pdf/57415_Assignment1.pdf" download="57415_Assignment1.pdf"><i class="fa fa-file-pdf-o"
+              aria-hidden="true"></i> First
+            Assignment</a>
+        </div>
+      </div>
     </div>
-  </body>
+
+    <div class="card">
+      <div class="content">
+        <div class="imgBx">
+          <img src="./img/ion.jpg" alt="" />
+        </div>
+        <div class="contentBx">
+          <h3>Ion Chirica</h3>
+          <h4>64475</h4>
+        </div>
+        <div class="sci">
+          <a href="#"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> First
+            Assignment</a>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="projectButton">
+    <button class="buttonCustomised" hidden>
+      <a href="finalProject.html">Final Project</a>
+    </button>
+  </div>
+</body>
+
 </html>
