--- a/index.html
+++ b/index.html
@@ -79,7 +79,8 @@
           <h4>64475</h4>
         </div>
         <div class="sci">
-          <a href="#"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> First
+          <a href="./pdf/64475_Assignment1.pdf" download="64476_Assigment1.pdf">
+            <i class="fa fa-file-pdf-o" aria-hidden="true"></i> First
             Assignment</a>
         </div>
       </div>
