added final project url

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 
     <div class="projectButton">
       <button class="buttonCustomised">
-        <a href="finalProject.html">Final Project</a>
+        <a href="https://jf-moura.github.io/IPM-Zoo/">Final Project</a>
       </button>
     </div>
   </body>
