added reports to website

--- a/index.html
+++ b/index.html
@@ -107,5 +107,56 @@
         <a href="https://jf-moura.github.io/IPM-Zoo/">Final Project</a>
       </button>
     </div>
+
+    <div class="projectButton">
+      <button class="buttonCustomised">
+        <a
+          href="./pdf/reports/IPM Group 05 Project Report.docx.pdf"
+          download="IPM Group 05 Project Report 1.pdf"
+          ><i class="fa fa-file-pdf-o" aria-hidden="true"></i>
+          First Report
+        </a>
+      </button>
+      <button class="buttonCustomised">
+        <a
+          href="./pdf/reports/IPM Group 05 Project Report 2.docx.pdf"
+          download="IPM Group 05 Project Report 2.pdf"
+          ><i class="fa fa-file-pdf-o" aria-hidden="true"></i>
+          Second Report
+        </a>
+      </button>
+      <button class="buttonCustomised">
+        <a
+          href="./pdf/reports/IPM Group 05 Project Report 3.docx.pdf"
+          download="IPM Group 05 Project Report 3.pdf"
+          ><i class="fa fa-file-pdf-o" aria-hidden="true"></i>
+          Third Report
+        </a>
+      </button>
+      <button class="buttonCustomised">
+        <a
+          href="./pdf/reports/IPM - stage 4.pdf"
+          download="IPM Group 05 Project Report 4.pdf"
+          ><i class="fa fa-file-pdf-o" aria-hidden="true"></i>
+          Fourth Report
+        </a>
+      </button>
+      <button class="buttonCustomised">
+        <a
+          href="./pdf/reports/IPM - Stage 5.pdf"
+          download="IPM Group 05 Project Report 5.pdf"
+          ><i class="fa fa-file-pdf-o" aria-hidden="true"></i>
+          Fifth Report
+        </a>
+      </button>
+      <button class="buttonCustomised">
+        <a
+          href="./pdf/reports/IPM - Stage 6.pdf"
+          download="IPM Group 05 Project Report 6.pdf"
+          ><i class="fa fa-file-pdf-o" aria-hidden="true"></i>
+          Sixth Report
+        </a>
+      </button>
+    </div>
   </body>
 </html>
